--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,6 +31,9 @@
 
 en:
   hello: "Hello world"
+  session:
+  could_not_auth: "Could not authenticate with the provided credentials."
+  incorrect_credentials: "Incorrect credentials, try again."
   successfully_created: "%{entity} was successfully created!"
   successfully_updated: "%{entity} was successfully updated!"
   task:
